Remove GEMINI_API_KEY from .env
Clear the GEMINI_API_KEY value in the .env file.

--- a/python-services/.env
+++ b/python-services/.env
@@ -19,4 +19,4 @@ db_password=password
 db_url=postgres://postgres:password@localhost:5432/postgres
 #db_url_test=postgres://postgres:password@localhost:5432/postgres_test
 ACCESS_TOKEN_EXPIRE_MINUTES = 60
-GEMINI_API_KEY=AIzaSyBi8T_t_3B9vQkAlFfX8DVD-MeqH6EHlM4
+GEMINI_API_KEY=""
