--- a/python-services/Dockerfile
+++ b/python-services/Dockerfile
@@ -1,7 +1,11 @@
-FROM python:3.13-slim
+FROM python:3.11-slim
 
-WORKDIR /usr/src/app
+WORKDIR /app
+
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+EXPOSE 8080
